Fixed a bug causing burger orders to display the order number, but not the name of the burger.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
                                     </span>
                                 </div>
                                 {{!-- Site Main Input --}}
-                                <input list="options" class="form-control" placeholder="Bacon Cheese Burger"
+                                <input list="options" id="sBurger" class="form-control" placeholder="Bacon Cheese Burger"
                                     type="text">
 
                                 {{!-- Site Main Input Recommended Burgers --}}
