--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,8 +45,8 @@
                                     </span>
                                 </div>
                                 {{!-- Site Main Input --}}
-                                <input list="options" id="sBurger" class="form-control" placeholder="Bacon Cheese Burger"
-                                    type="text">
+                                <input list="options" id="sBurger" class="form-control"
+                                    placeholder="Bacon Cheese Burger" type="text">
 
                                 {{!-- Site Main Input Recommended Burgers --}}
                                 <datalist id="options">
@@ -74,7 +74,7 @@
             <div class="col-md-6">
                 <div class="card">
                     {{!-- Site Burger Table --}}
-                    <h5 class="card-header">Current Burger Orders</h5>
+                    <h5 class="card-header">Burger Orders</h5>
                     <div class="card-body">
                         <ol>
                             {{!-- For Each Burger Not Devoured, display here --}}
@@ -82,9 +82,9 @@
                             {{#unless devoured}}
                             <li class="mt-2">
                                 {{this.burger_name}}
-                                <button class="btnPurchase btn btn-success btn-sm p-1" id="btnPurchase" data-id="{{this.id}}"
-                                    data-newPurchased="{{purchase}}">
-                                    Purchase
+                                <button class="btnEatBurger btn btn-success btn-sm p-1" id="btnEatBurger"
+                                    data-id="{{this.id}}">
+                                    Devour!
                                 </button>
                             </li>
                             {{/unless}}
@@ -96,18 +96,14 @@
             {{!-- Site Devour Table --}}
             <div class="col-md-6">
                 <div class="card">
-                    <h5 class="card-header">Eat-Dem-Burgers</h5>
+                    <h5 class="card-header">Burgers Eaten</h5>
                     <div class="card-body">
                         {{!-- For Each burger devoured, display here --}}
                         <ol>
                             {{#each burgers}}
                             {{#if devoured}}
                             <li class="mt-2">
-                                {{this.burger_name}}
-                                <button class="btn btn-warning btn-sm p-1" class="btnDevour" data-id="{{this.id}}"
-                                    data-newDevoured="{{devour}}">
-                                    Devour!
-                                </button>
+                                <del>{{this.burger_name}}</del>
                             </li>
                             {{/if}}
                             {{/each}}
